# git-expt

./: .gitignore  README.md  Untitled.ipynb  Untitled3.ipynb  Untitled4.ipynb  _version.py  base.txt  file.txt  file2.txt  making-figures.ipynb  pyproject.toml  requirements.txt  run_18043696681_2025-09-26T16-36-37.011041.json  run_18043782510_2025-09-26T16-40-25.657267.json  run_18043925641_2025-09-26T16-46-53.838029.json  run_18043963616_2025-09-26T16-48-41.380996.json  run_18043997897_2025-09-26T16-50-17.535284.json  test.ipynb  test.master  test_bisection_locally.py  test_sample.py  unrelated.txt  untitled.txt  untitled3.txt  yikes.txt  yikes2.txt
.binder/: environment.yml
.github/ISSUE_TEMPLATE/: bug2.yml  bug3.yml  bug_report.md  doc.md  test.md  zarr_bug.yml
.github/workflows/: publish.yml  test-bisection-uv.yml  test-bisection.yml  test-failing.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md
.ipynb_checkpoints/.ipynb_checkpoints/: Untitled-checkpoint-checkpoint.ipynb
binder/: requirements.txt
